# simple-re2-vm

./: .gitignore  LICENSE  README.md  a_or_eps_or_b.re2asm  pyproject.toml
regex-programs/: prog1.rasm
src/lang/: RE2asm.g4
src/simple_re2/: assembler.py  vm.py
src/simple_re2/lang/: RE2asm.g4
tests/: test_vm.py
