[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
version = '2024'
name = 'simple-re2-vm'
description = "A minimal implementation of RE2's virtual machine"
readme = 'README.md'
dependencies = ['pytest']
requires-python = '>= 3.12'

[tool.hatch.build.targets.wheel]
packages = ['src/simple_re2']
